@@ -1,3 +1,9 @@
+2009-04-06  Mark Ellis  <mark@mpellis.org.uk>
+
+	* add utf8 option to all conversion tools; add optional timezone
+	  file to rra-appointment-from-vevent and rra-task-to-vtodo; add
+	  debug level option to get-{types,ids,data} tools
+
 2009-04-03  Mark Ellis  <mark@mpellis.org.uk>
 
 	* specify an IP for SyncMgr to connect to, rather than all
